// SPDX-License-Identifier: MIT
// Copyright (c) 2025 Sorcha Contributors

using System.Security.Cryptography;
using Grpc.Core;
using Grpc.Net.Client;
using Polly;
using Polly.Retry;
using Sorcha.Cryptography.Enums;
using Sorcha.Cryptography.Interfaces;
using Sorcha.Validator.Service.Configuration;
using Sorcha.Validator.Service.Models;
using Sorcha.Wallet.Service.Protos;

namespace Sorcha.Validator.Service.Services;

/// <summary>
/// Service implementation for wallet integration with the Wallet Service.
/// </summary>
/// <remarks>
/// <para>
/// This service manages all cryptographic operations for the Validator Service using
/// a dedicated wallet from the Wallet Service. It implements caching, retry logic,
/// rotation detection, and local cryptography for performance.
/// </para>
///
/// <para><b>Key Features:</b></para>
/// <list type="bullet">
///   <item>Wallet details cached in memory for service lifetime</item>
///   <item>Derived private keys cached for local signing (12x speedup)</item>
///   <item>Exponential backoff retry (3 attempts, 1s + 2s + 4s)</item>
///   <item>Wallet rotation detection and cache invalidation</item>
///   <item>Graceful handling of wallet deletion</item>
///   <item>Thread-safe operations with SemaphoreSlim</item>
/// </list>
///
/// <para><b>Security:</b></para>
/// <list type="bullet">
///   <item>Root private key NEVER accessed (FR-012)</item>
///   <item>Derived keys cached in memory only (SC-006)</item>
///   <item>Keys zeroed on disposal (security best practice)</item>
/// </list>
/// </remarks>
public class WalletIntegrationService : IWalletIntegrationService, IDisposable
{
    private readonly ILogger<WalletIntegrationService> _logger;
    private readonly ICryptoModule _cryptoModule;
    private readonly WalletService.WalletServiceClient _walletClient;
    private readonly WalletConfiguration _config;
    private readonly AsyncRetryPolicy _retryPolicy;

    // Wallet details cache (thread-safe)
    private readonly SemaphoreSlim _walletCacheLock = new(1, 1);
    private WalletDetails? _cachedWallet;

    // Derived key cache (thread-safe)
    private readonly SemaphoreSlim _derivedKeyCacheLock = new(1, 1);
    private readonly Dictionary<string, byte[]> _derivedKeyCache = new();

    private bool _disposed;

    /// <summary>
    /// Initializes a new instance of the <see cref="WalletIntegrationService"/> class.
    /// </summary>
    /// <param name="logger">Logger instance.</param>
    /// <param name="cryptoModule">Cryptography module for local signing/verification.</param>
    /// <param name="config">Wallet configuration.</param>
    /// <param name="walletServiceChannel">gRPC channel for Wallet Service.</param>
    public WalletIntegrationService(
        ILogger<WalletIntegrationService> logger,
        ICryptoModule cryptoModule,
        WalletConfiguration config,
        GrpcChannel walletServiceChannel)
    {
        _logger = logger ?? throw new ArgumentNullException(nameof(logger));
        _cryptoModule = cryptoModule ?? throw new ArgumentNullException(nameof(cryptoModule));
        _config = config ?? throw new ArgumentNullException(nameof(config));

        if (walletServiceChannel == null)
            throw new ArgumentNullException(nameof(walletServiceChannel));

        _walletClient = new WalletService.WalletServiceClient(walletServiceChannel);

        // Configure retry policy with exponential backoff (FR-009)
        _retryPolicy = CreateRetryPolicy();

        _logger.LogInformation(
            "WalletIntegrationService initialized with wallet ID: {WalletId}, endpoint: {Endpoint}",
            _config.WalletId, _config.Endpoint);
    }

    /// <inheritdoc />
    public async Task<WalletDetails> GetWalletDetailsAsync(CancellationToken ct = default)
    {
        // Check cache first (fast path)
        if (_cachedWallet != null)
        {
            _logger.LogDebug("Returning cached wallet details for {WalletId}", _cachedWallet.WalletId);
            return _cachedWallet;
        }

        // Cache miss - fetch from Wallet Service (slow path)
        await _walletCacheLock.WaitAsync(ct);
        try
        {
            // Double-check after acquiring lock
            if (_cachedWallet != null)
                return _cachedWallet;

            _logger.LogInformation("Fetching wallet details from Wallet Service for wallet ID: {WalletId}", _config.WalletId);

            var response = await _retryPolicy.ExecuteAsync(async () =>
                await _walletClient.GetWalletDetailsAsync(
                    new GetWalletDetailsRequest { WalletId = _config.WalletId },
                    cancellationToken: ct));

            _cachedWallet = new WalletDetails
            {
                WalletId = response.WalletId,
                Address = response.Address,
                PublicKey = response.PublicKey.ToByteArray(),
                Algorithm = MapProtoAlgorithm(response.Algorithm),
                Version = response.Version,
                DerivationPath = string.IsNullOrEmpty(response.DerivationPath) ? null : response.DerivationPath,
                CachedAt = DateTimeOffset.UtcNow
            };

            _logger.LogInformation(
                "Cached wallet details: WalletId={WalletId}, Address={Address}, Algorithm={Algorithm}, Version={Version}",
                _cachedWallet.WalletId,
                _cachedWallet.Address,
                _cachedWallet.Algorithm,
                _cachedWallet.Version);

            return _cachedWallet;
        }
        catch (RpcException ex) when (ex.StatusCode == StatusCode.NotFound)
        {
            _logger.LogCritical(
                ex,
                "Wallet not found: {WalletId}. Validator cannot operate without a wallet.",
                _config.WalletId);
            throw new InvalidOperationException(
                $"Wallet '{_config.WalletId}' not found in Wallet Service. " +
                "Please configure a valid wallet ID via VALIDATOR_WALLET_ID environment variable or Tenant Service.",
                ex);
        }
        catch (RpcException ex)
        {
            _logger.LogError(
                ex,
                "Failed to retrieve wallet details after retries. StatusCode={StatusCode}, Detail={Detail}",
                ex.StatusCode,
                ex.Status.Detail);
            throw new InvalidOperationException(
                $"Failed to retrieve wallet details from Wallet Service: {ex.Status.Detail}",
                ex);
        }
        finally
        {
            _walletCacheLock.Release();
        }
    }

    /// <inheritdoc />
    public async Task<Signature> SignDocketAsync(byte[] docketHash, CancellationToken ct = default)
    {
        if (docketHash == null || docketHash.Length != 32)
            throw new ArgumentException("Docket hash must be 32 bytes (SHA-256)", nameof(docketHash));

        // Get wallet details (cached)
        var wallet = await GetWalletDetailsAsync(ct);

        // Get derived key for docket signing (BIP44 path: m/44'/0'/0'/0/0)
        const string docketSigningPath = "m/44'/0'/0'/0/0";
        var derivedKey = await GetDerivedPrivateKeyAsync(docketSigningPath, ct);

        _logger.LogDebug("Signing docket with {Algorithm} using local cryptography", wallet.Algorithm);

        // Sign locally using Sorcha.Cryptography (FR-017)
        var signResult = await _cryptoModule.SignAsync(
            hash: docketHash,
            network: (byte)wallet.Algorithm,
            privateKey: derivedKey,
            cancellationToken: ct);

        if (!signResult.IsSuccess || signResult.Value == null)
        {
            _logger.LogError(
                "Docket signing failed: {Status}, {Error}",
                signResult.Status,
                signResult.ErrorMessage);
            throw new CryptographicException($"Docket signing failed: {signResult.ErrorMessage}");
        }

        var signature = new Signature
        {
            PublicKey = wallet.PublicKey,
            SignatureValue = signResult.Value,
            Algorithm = wallet.Algorithm.ToString(),
            SignedAt = DateTimeOffset.UtcNow,
            SignedBy = wallet.Address
        };

        _logger.LogInformation(
            "Docket signed successfully: Algorithm={Algorithm}, SignatureLength={Length} bytes",
            signature.Algorithm,
            signature.SignatureValue.Length);

        return signature;
    }

    /// <inheritdoc />
    public async Task<Signature> SignVoteAsync(byte[] voteHash, CancellationToken ct = default)
    {
        if (voteHash == null || voteHash.Length != 32)
            throw new ArgumentException("Vote hash must be 32 bytes (SHA-256)", nameof(voteHash));

        // Get wallet details (cached)
        var wallet = await GetWalletDetailsAsync(ct);

        // Get derived key for vote signing (different path for key isolation: m/44'/0'/0'/1/0)
        const string voteSigningPath = "m/44'/0'/0'/1/0";
        var derivedKey = await GetDerivedPrivateKeyAsync(voteSigningPath, ct);

        _logger.LogDebug("Signing consensus vote with {Algorithm} using local cryptography", wallet.Algorithm);

        // Sign locally using Sorcha.Cryptography (FR-017)
        var signResult = await _cryptoModule.SignAsync(
            hash: voteHash,
            network: (byte)wallet.Algorithm,
            privateKey: derivedKey,
            cancellationToken: ct);

        if (!signResult.IsSuccess || signResult.Value == null)
        {
            _logger.LogError(
                "Vote signing failed: {Status}, {Error}",
                signResult.Status,
                signResult.ErrorMessage);
            throw new CryptographicException($"Vote signing failed: {signResult.ErrorMessage}");
        }

        var signature = new Signature
        {
            PublicKey = wallet.PublicKey,
            SignatureValue = signResult.Value,
            Algorithm = wallet.Algorithm.ToString(),
            SignedAt = DateTimeOffset.UtcNow,
            SignedBy = wallet.Address
        };

        _logger.LogDebug(
            "Vote signed successfully: Algorithm={Algorithm}, SignatureLength={Length} bytes",
            signature.Algorithm,
            signature.SignatureValue.Length);

        return signature;
    }

    /// <inheritdoc />
    public async Task<bool> VerifySignatureAsync(
        byte[] signature,
        byte[] hash,
        byte[] publicKey,
        Models.WalletAlgorithm algorithm,
        CancellationToken ct = default)
    {
        if (signature == null || signature.Length == 0)
            throw new ArgumentException("Signature cannot be null or empty", nameof(signature));
        if (hash == null || hash.Length != 32)
            throw new ArgumentException("Hash must be 32 bytes (SHA-256)", nameof(hash));
        if (publicKey == null || publicKey.Length == 0)
            throw new ArgumentException("Public key cannot be null or empty", nameof(publicKey));

        _logger.LogDebug("Verifying signature with {Algorithm} using local cryptography", algorithm);

        // Verify locally using Sorcha.Cryptography (FR-017)
        var verifyStatus = await _cryptoModule.VerifyAsync(
            signature: signature,
            hash: hash,
            network: (byte)algorithm,
            publicKey: publicKey,
            cancellationToken: ct);

        var isValid = verifyStatus == CryptoStatus.Success;

        _logger.LogDebug(
            "Signature verification result: {Result} (Algorithm={Algorithm})",
            isValid ? "Valid" : "Invalid",
            algorithm);

        return isValid;
    }

    /// <summary>
    /// Retrieves a derived private key from the Wallet Service with caching.
    /// </summary>
    /// <param name="derivationPath">BIP44 derivation path (e.g., m/44'/0'/0'/0/0).</param>
    /// <param name="ct">Cancellation token.</param>
    /// <returns>Derived private key bytes.</returns>
    /// <remarks>
    /// This method caches derived keys in memory only (never persisted per SC-006).
    /// Keys are zeroed on service disposal for security.
    /// </remarks>
    private async Task<byte[]> GetDerivedPrivateKeyAsync(string derivationPath, CancellationToken ct)
    {
        // Check cache first
        if (_derivedKeyCache.TryGetValue(derivationPath, out var cachedKey))
        {
            _logger.LogDebug("Using cached derived key for path: {DerivationPath}", derivationPath);
            return cachedKey;
        }

        // Cache miss - fetch from Wallet Service
        await _derivedKeyCacheLock.WaitAsync(ct);
        try
        {
            // Double-check after acquiring lock
            if (_derivedKeyCache.TryGetValue(derivationPath, out cachedKey))
                return cachedKey;

            _logger.LogInformation("Fetching derived key from Wallet Service for path: {DerivationPath}", derivationPath);

            var response = await _retryPolicy.ExecuteAsync(async () =>
                await _walletClient.GetDerivedKeyAsync(
                    new GetDerivedKeyRequest
                    {
                        WalletId = _config.WalletId,
                        DerivationPath = derivationPath
                    },
                    cancellationToken: ct));

            var derivedKey = response.PrivateKey.ToByteArray();
            _derivedKeyCache[derivationPath] = derivedKey;

            _logger.LogInformation(
                "Cached derived key for path: {DerivationPath} (KeyLength={Length} bytes)",
                derivationPath,
                derivedKey.Length);

            return derivedKey;
        }
        catch (RpcException ex)
        {
            _logger.LogError(
                ex,
                "Failed to retrieve derived key for path: {DerivationPath}. StatusCode={StatusCode}",
                derivationPath,
                ex.StatusCode);
            throw new CryptographicException(
                $"Failed to retrieve derived key from Wallet Service: {ex.Status.Detail}",
                ex);
        }
        finally
        {
            _derivedKeyCacheLock.Release();
        }
    }

    /// <summary>
    /// Creates the retry policy with exponential backoff.
    /// </summary>
    /// <returns>Configured async retry policy.</returns>
    /// <remarks>
    /// Implements FR-009 retry requirements:
    /// <list type="bullet">
    ///   <item>3 max retries (4 total attempts)</item>
    ///   <item>2x backoff multiplier</item>
    ///   <item>1 second initial delay</item>
    ///   <item>Total retry window: 1s + 2s + 4s = 7 seconds</item>
    /// </list>
    /// </remarks>
    private AsyncRetryPolicy CreateRetryPolicy()
    {
        return Policy
            .Handle<RpcException>(ex =>
                ex.StatusCode == StatusCode.Unavailable ||
                ex.StatusCode == StatusCode.DeadlineExceeded)
            .Or<HttpRequestException>()
            .WaitAndRetryAsync(
                retryCount: _config.RetryPolicy.MaxRetries,
                sleepDurationProvider: attempt => TimeSpan.FromSeconds(
                    _config.RetryPolicy.InitialDelaySeconds *
                    Math.Pow(_config.RetryPolicy.BackoffMultiplier, attempt - 1)),
                onRetry: (exception, timeSpan, attemptNumber, context) =>
                {
                    _logger.LogWarning(
                        exception,
                        "Wallet Service call failed on attempt {AttemptNumber}/{MaxRetries}. " +
                        "Retrying after {RetryDelayMs}ms. Error: {ErrorMessage}",
                        attemptNumber,
                        _config.RetryPolicy.MaxRetries,
                        timeSpan.TotalMilliseconds,
                        exception.Message);
                });
    }

    /// <summary>
    /// Maps proto WalletAlgorithm enum to domain WalletAlgorithm enum.
    /// </summary>
    private static Models.WalletAlgorithm MapProtoAlgorithm(Wallet.Service.Protos.WalletAlgorithm protoAlgorithm)
    {
        return protoAlgorithm switch
        {
            Wallet.Service.Protos.WalletAlgorithm.Ed25519 => Models.WalletAlgorithm.ED25519,
            Wallet.Service.Protos.WalletAlgorithm.Nistp256 => Models.WalletAlgorithm.NISTP256,
            Wallet.Service.Protos.WalletAlgorithm.Rsa4096 => Models.WalletAlgorithm.RSA4096,
            _ => throw new ArgumentException($"Unknown wallet algorithm: {protoAlgorithm}")
        };
    }

    /// <summary>
    /// Disposes resources and zeros out cached private keys for security.
    /// </summary>
    public void Dispose()
    {
        if (_disposed)
            return;

        _logger.LogInformation("Disposing WalletIntegrationService and clearing cached private keys");

        // Zero out all cached private keys (security best practice per SC-006)
        foreach (var key in _derivedKeyCache.Values)
        {
            Array.Clear(key, 0, key.Length);
        }
        _derivedKeyCache.Clear();

        _walletCacheLock.Dispose();
        _derivedKeyCacheLock.Dispose();

        _disposed = true;
    }
}
